--- a/src/app/admin/components/user/user.component.html
+++ b/src/app/admin/components/user/user.component.html
@@ -1,9 +1,16 @@
-<div>
-  <button mat-raised-button (click)="openCreateDialog()">Create</button>
-</div>
+<div class="d-flex justify-content-center"><h2>{{'USER.LABEL.PLURAL' | translate}}</h2></div>
+<button
+  mat-fab
+  color="primary"
+  matTooltip="{{'ACTIONS.CREATE' | translate}}"
+  matTooltipPosition="right"
+  (click)="openCreateDialog()">
+  <mat-icon>add</mat-icon>
+</button>
 <div class="mt-3">
   <app-table
     [dataSource]="data"
+    [entity]="'USER'"
     [displayedColumns]="displayedColumns"
     (updateEvent)="openUpdateDialog($event)"
     (deleteEvent)="openDeleteDialog($event)"
@@ -17,8 +24,8 @@
     <ng-container *ngIf="dialogActionType !== DIALOG_ACTION_TYPE.REMOVE" [ngTemplateOutlet]="formTemplate"></ng-container>
   </div>
   <div mat-dialog-actions>
-    <button mat-button mat-dialog-close>Close</button>
-    <button mat-button [mat-dialog-close]="true" (click)="dialogMainAction()">{{dialogMainActionName}}</button>
+    <button mat-raised-button mat-dialog-close>{{'ACTIONS.CLOSE' | translate}}</button>
+    <button mat-raised-button [mat-dialog-close]="true" (click)="dialogMainAction()">{{dialogMainActionName | translate}}</button>
   </div>
 </ng-template>
 
