--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -3,7 +3,7 @@
   <!-- prop Column -->
   <ng-container *ngFor="let column of displayColumnFilter">
     <ng-container matColumnDef="{{column}}">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header style="width:10%;">{{column}}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header style="width:10%;">{{getLanguageKeyColumn(column) | translate}}</th>
       <td mat-cell *matCellDef="let element" style="width:10%;"> {{element[column]}} </td>
     </ng-container>
   </ng-container>
@@ -11,13 +11,22 @@
 
   <!-- Action Column -->
   <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef class="text-center"> Actions </th>
+    <th mat-header-cell *matHeaderCellDef class="text-center"> {{'ACTIONS.LABEL' | translate}} </th>
     <td mat-cell *matCellDef="let element" class="text-center">
-      <button mat-flat-button (click)="update(element)">
-        <mat-icon aria-hidden="false" aria-label="Example edit icon">edit</mat-icon>
+      <button
+        mat-icon-button
+        matTooltip="{{'ACTIONS.UPDATE' | translate}}"
+        matTooltipPosition="before"
+        (click)="update(element)"
+        class="mr-2">
+        <mat-icon>edit</mat-icon>
       </button>
-      <button mat-flat-button (click)="delete(element.id)">
-        <mat-icon aria-hidden="false" aria-label="Example trash icon">delete</mat-icon>
+      <button
+        mat-icon-button
+        matTooltip="{{'ACTIONS.DELETE' | translate}}"
+        matTooltipPosition="after"
+        (click)="delete(element.id)">
+        <mat-icon>delete</mat-icon>
       </button>
     </td>
   </ng-container>
