--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,3 +33,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+button:focus{
+  outline: none;
+}
