--- a/src/app/admin/components/login/login.component.html
+++ b/src/app/admin/components/login/login.component.html
@@ -3,8 +3,8 @@
     <mat-card style="max-width: 400px">
       <mat-card-header>
         <!--      <div mat-card-avatar class="example-header-image"></div>-->
-        <mat-card-title>SignIn</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+<!--        <mat-card-title>SignIn</mat-card-title>-->
+<!--        <mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
       </mat-card-header>
       <!--    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">-->
       <mat-card-content>
