--- a/src/app/admin/components/user/user.component.html
+++ b/src/app/admin/components/user/user.component.html
@@ -9,7 +9,7 @@
 </button>
 <div class="mt-3">
   <app-table
-    [dataSource]="data"
+    [dataSource]="data$ | async"
     [entity]="'USER'"
     [displayedColumns]="displayedColumns"
     (updateEvent)="openUpdateDialog($event)"
