create store for authentication

--- a/src/app/admin/components/login/login.component.html
+++ b/src/app/admin/components/login/login.component.html
@@ -18,11 +18,8 @@
         </mat-form-field>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button type="submit">SignIn</button>
+        <button mat-button type="submit">{{'ACTIONS.SIGN_IN' | translate}}</button>
       </mat-card-actions>
     </mat-card>
   </form>
 </div>
-
-
-<!--<button mat-button (click)="signOut()">SignOut</button>-->
