--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container class="h-100" >
-  <mat-drawer mode="side" opened="{{open}}">
+  <mat-drawer mode="side" opened="{{open$ | async}}">
     <div class="pl-3 pr-3">
       <div>
         <button mat-button routerLink="clients">
@@ -13,10 +13,16 @@
           <span class="ml-5">{{'USER.LABEL.PLURAL' | translate}}</span>
         </button>
       </div>
+      <div>
+        <button mat-button (click)="signOut()">
+          <mat-icon>out</mat-icon>
+          <span class="ml-5">{{'ACTIONS.SIGN_OUT' | translate}}</span>
+        </button>
+      </div>
     </div>
   </mat-drawer>
   <mat-drawer-content>
-    <div class="p-5 ml-5 mr-5">
+    <div class="p-5 ml-5 mr-5 h-100">
       <router-outlet></router-outlet>
     </div>
   </mat-drawer-content>
