--- a/src/app/admin/components/login/login.component.html
+++ b/src/app/admin/components/login/login.component.html
@@ -1,24 +1,41 @@
 <div class="d-flex justify-content-center h-100 align-items-center">
   <form action="" (submit)="signIn()" [formGroup]="form">
     <mat-card style="max-width: 400px">
-      <mat-card-header>
-        <!--      <div mat-card-avatar class="example-header-image"></div>-->
-<!--        <mat-card-title>SignIn</mat-card-title>-->
-<!--        <mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
+      <mat-card-header class="pt-4">
+        <mat-card-title><h3>{{'AUTH.LABEL' | translate}}</h3></mat-card-title>
       </mat-card-header>
-      <!--    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">-->
+      <img mat-card-image src="assets/images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="Photo of a Shiba Inu">
       <mat-card-content>
-        <mat-form-field class="w-100">
-          <mat-label>Email</mat-label>
-          <input matInput placeholder="jhon@gmail.com" value="" formControlName="email">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>{{'USER.ATTR.EMAIL' | translate}}</mat-label>
+          <input matInput placeholder="{{'PLACEHOLDER.EMAIL' | translate}}" required formControlName="email">
+          <mat-icon matSuffix>email</mat-icon>
+          <mat-error *ngIf="form.controls['email'].invalid">{{'REQUIRED.EMAIL' | translate}}</mat-error>
         </mat-form-field>
-        <mat-form-field class="w-100">
-          <mat-label>Password</mat-label>
-          <input matInput placeholder="introduce password" type="password" value="" formControlName="password">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>{{'USER.ATTR.PASSWORD' | translate}}</mat-label>
+          <input matInput placeholder="{{'PLACEHOLDER.PASSWORD' | translate}}" [type]="hide ? 'password' : 'text'" required formControlName="password">
+          <button mat-icon-button matSuffix type="button" (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+          <mat-error *ngIf="form.controls['password'].invalid">{{'REQUIRED.PASSWORD' | translate}}</mat-error>
         </mat-form-field>
+        <div class="d-flex justify-content-center pt-2">
+          <button mat-button mat-raised-button color="primary" [disabled]="processing$ | async" class="d-flex justify-content-center w-100" type="submit">
+            <div *ngIf="!(processing$ | async)">{{'ACTIONS.SIGN_IN' | translate}}</div>
+            <div *ngIf="processing$ | async" class="p-1">
+              <mat-progress-spinner
+                color="primary"
+                diameter="30"
+                strokeWidth="5"
+                mode="indeterminate">
+              </mat-progress-spinner>
+            </div>
+          </button>
+        </div>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button type="submit">{{'ACTIONS.SIGN_IN' | translate}}</button>
+
       </mat-card-actions>
     </mat-card>
   </form>
