--- a/src/app/admin/components/user/user.component.html
+++ b/src/app/admin/components/user/user.component.html
@@ -5,7 +5,7 @@
   matTooltip="{{'ACTIONS.CREATE' | translate}}"
   matTooltipPosition="right"
   (click)="openCreateDialog()">
-  <mat-icon>add</mat-icon>
+  <mat-icon>person_add</mat-icon>
 </button>
 <div class="mt-3">
   <app-table
