--- a/src/app/admin/components/login/login.component.html
+++ b/src/app/admin/components/login/login.component.html
@@ -2,7 +2,7 @@
   <form action="" (submit)="signIn()" [formGroup]="form">
     <mat-card style="max-width: 400px">
       <mat-card-header class="pt-4">
-        <mat-card-title><h3>{{'AUTH.LABEL' | translate}}</h3></mat-card-title>
+        <mat-card-title><h3 class="font-montserrat">{{'AUTH.LABEL' | translate}}</h3></mat-card-title>
       </mat-card-header>
       <img mat-card-image src="assets/images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg" alt="Photo of a Shiba Inu">
       <mat-card-content>
