--- a/src/app/admin/components/not-found/not-found.component.html
+++ b/src/app/admin/components/not-found/not-found.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-center align-items-center flex-column font-montserrat" style="height: calc(100vh - 150px);">
   <div style="font-size: 7em;
     line-height: 1em;
-    text-align: center;">ERROR 401</div>
-  <div class="mt-1" style="font-size: 2em">{{"401" | translate | titlecase}}</div>
+    text-align: center;">ERROR 404</div>
+  <div class="mt-1" style="font-size: 2em">{{"Sorry, page not found" | titlecase}}</div>
 </div>
