--- a/src/app/admin/components/client/client.component.html
+++ b/src/app/admin/components/client/client.component.html
@@ -1,6 +1,6 @@
 <div class="sub-tool-bar mb-5">
   <div class="pt-1 pb-1 pl-5 pr-5 d-flex justify-content-between align-items-center">
-    <div class="d-flex pt-2 pb-2">
+    <div class="d-flex pt-2 pb-2 font-montserrat">
       <mat-icon class="mr-2">group</mat-icon>
       <span>{{'CLIENT.LABEL.PLURAL' | translate}}</span>
     </div>
@@ -30,7 +30,7 @@
 
   <ng-template #template>
     <div mat-dialog-title>
-      <div>{{dialogTitle | translate:{entity: ('CLIENT.LABEL.SINGULAR' | translate)} }}</div>
+      <div class="font-montserrat">{{dialogTitle | translate:{entity: ('CLIENT.LABEL.SINGULAR' | translate)} }}</div>
     </div>
     <div mat-dialog-content>
       <ng-container *ngIf="dialogActionType === DIALOG_ACTION_TYPE.REMOVE" [ngTemplateOutlet]="removeTemplate"></ng-container>
@@ -38,7 +38,7 @@
     </div>
     <hr>
     <div mat-dialog-actions class="d-flex justify-content-end pb-3">
-      <button mat-raised-button color="primary" *ngIf="showNextButton" (click)="stepper.next()">Next</button>
+      <button mat-raised-button color="primary" *ngIf="showNextButton" (click)="stepper.next()">{{'ACTIONS.NEXT' | translate}}</button>
       <button mat-raised-button color="primary" *ngIf="!showNextButton" [mat-dialog-close]="true" (click)="dialogMainAction()">{{dialogMainActionName | translate:{entity: ''} }}</button>
       <button mat-raised-button mat-dialog-close>{{'ACTIONS.CLOSE' | translate}}</button>
     </div>
