--- a/src/app/admin/components/user/user.component.html
+++ b/src/app/admin/components/user/user.component.html
@@ -1,6 +1,6 @@
 <div class="sub-tool-bar mb-5">
   <div class="pt-1 pb-1 pl-5 pr-5 d-flex justify-content-between align-items-center">
-    <div class="d-flex">
+    <div class="d-flex pt-2 pb-2 font-montserrat">
       <mat-icon class="mr-2">group</mat-icon>
       <span>{{'USER.LABEL.PLURAL' | translate}}</span>
     </div>
